# AudiVise

./: .env.example  .gitignore  .mailmap  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260620_0001_initial_schema.py  20260620_0002_agent_trace_diagnostics.py  20260621_0003_active_task_uniqueness.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  state.py  tools.py
backend/app/api/: chat.py  health.py  tasks.py  uploads.py  videos.py
backend/app/core/: config.py  database.py
backend/app/evals/: __init__.py  metrics.py  run.py
backend/app/integrations/: ai_provider.py  execution_lease.py  ffmpeg.py  object_storage.py  upload_progress.py  vector_store.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/schemas/: chat.py  summary.py  tasks.py  uploads.py  videos.py
backend/app/services/: db_retrieval.py  hybrid_retrieval.py  media_pipeline.py  production_pipeline.py  retrieval.py  task_dispatch.py  task_state.py  transcripts.py
backend/app/worker/: celery_app.py  tasks.py
backend/evals/: video_qa.jsonl
backend/tests/: conftest.py  test_agent.py  test_ai_provider.py  test_chat_api.py  test_compose_config.py  test_content_deduplication.py  test_content_hash.py  test_eval_metrics.py  test_events_api.py  test_execution_lease.py  test_health.py  test_media_pipeline.py  test_object_storage.py  test_retrieval.py  test_task_api.py  test_task_state.py  test_transcript_api.py  test_upload_api.py
client/: README.md  (+5 more)
(+13 files in other folders)
