[project]
name = "audivise-agent"
version = "0.1.0"
description = "AudiVise audio/video speech understanding platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langgraph>=1.0,<2",
  "minio>=7.2,<8",
  "pydantic-settings>=2.6,<3",
  "psycopg[binary]>=3.2,<4",
  "qdrant-client>=1.15,<1.16",
  "sqlalchemy>=2.0,<3",
  "sse-starlette>=3,<4",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<10",
  "pyyaml>=6,<7",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
